# LearnOpenGL-implementation

./: .gitignore
1.getting_started/: .gitignore  CMakeLists.txt  run.sh
1.getting_started/include/glad/: glad.h
1.getting_started/include/learnopengl/: shader_s.h
1.getting_started/src/: Hello_Window.cpp  Hello_rectangle.cpp  Hello_triangle.cpp  glad.c  shaders_colorful.cpp
1.getting_started/src/3.shaders/: shaders_class.cpp  shaders_uniform.cpp
1.getting_started/src/4.textures/: texture.fs  textures.cpp
